tests/functional/lang/parse-fail-unexpected-ellipsis.err
error: syntax error, unexpected '...', expecting '.' or '='
       at «stdin»:1:5:
            1| { a ... }
             |     ^
            2|
